force-app/main/default/objects/Employment_Website__c/fields/Employment_Website_Name__c.field-meta.xml
<CustomField>
    <fullName>Employment_Website_Name__c</fullName>
    <label>Employment Website Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>