force-app/main/default/objects/Employment_Website__c/fields/Maximum_Budget__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Budget__c</fullName>
    <label>Maximum Budget</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>