force-app/main/default/objects/Employment_Website__c/fields/Price_per_Post__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Post__c</fullName>
    <label>Price per Post</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>